--- a/index.html
+++ b/index.html
@@ -662,14 +662,14 @@
 
       // ARRAY FOR PERSONALIZED LOVE NOTES
       const personalizedLoveNotes = [
-        "You are my magnificent **Sunbeam**! ☀️",
-        "Hey there, **Gorgeous**! You look incredible.",
-        "My dearest **Love Bug**, I adore you.",
-        "You are my **Sweet Pea**, always.",
-        "Hello, my clever **Brainy Bear**!",
-        "You're the kindest **Angel Face** I know.",
-        "My amazing **Rockstar**, never stop shining!",
-        "I love you, **Little Star**! ✨",
+        "You are my magnificent Sunbeam! ☀️",
+        "Hey there, Gorgeous! You look incredible",
+        "My dearest Love Bug, I adore you",
+        "You are my Sweet Pea, always",
+        "Hello, my clever Brainy Bear!",
+        "You're the kindest Angel Face I know",
+        "My amazing Rockstar, never stop shining!",
+        "I love you, My little Star! ✨",
       ];
 
       // --- 1. Love Letter Reveal Handler ---
@@ -779,3 +779,4 @@
     </script>
   </body>
 </html>
+
